welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:5: error: not found: value vor
vor y = 0
^indexOfMaxValue:8: error: not found: value y
{if (occ < nums(i)) {occ = nums(i); y = i;}}
                                    ^indexOfMaxValue:9: error: not found: value y
return y} 
       ^